[KARAF-7164]Pax-Exam failure to Start Karaf container Java > 8
(cherry picked from commit cb22aeb91e99b7cc7622b22af255aac8f478798a)